--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,16 +10,20 @@
     "lint:ts": "tsc --noEmit -p tsconfig.json"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.0.1",
     "@headlessui/react": "^1.7.14",
     "@xstate/react": "^1.5.1",
+    "antd": "^5.4.7",
     "autoprefixer": "^10.4.14",
+    "axios": "^1.4.0",
     "mapbox-gl": "^2.3.1",
     "next": "11.0.1",
     "postcss": "^8.4.23",
     "react": "17.0.2",
-    "react-dom": "17.0.2",
     "tailwindcss": "^3.3.2",
-    "xstate": "^4.22.0"
+    "xstate": "^4.22.0",
+    "react-dom": "17.0.2"
+
   },
   "devDependencies": {
     "@types/mapbox-gl": "^2.3.0",
